logs/service-registry.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/apache_libcloud-0.12.4.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/libcloud'...
Listing './lib/python3.5/site-packages/libcloud/common'...
Listing './lib/python3.5/site-packages/libcloud/compute'...
Listing './lib/python3.5/site-packages/libcloud/compute/drivers'...
Listing './lib/python3.5/site-packages/libcloud/data'...
Listing './lib/python3.5/site-packages/libcloud/dns'...
Listing './lib/python3.5/site-packages/libcloud/dns/drivers'...
Listing './lib/python3.5/site-packages/libcloud/loadbalancer'...
Listing './lib/python3.5/site-packages/libcloud/loadbalancer/drivers'...
Listing './lib/python3.5/site-packages/libcloud/storage'...
Listing './lib/python3.5/site-packages/libcloud/storage/drivers'...
Listing './lib/python3.5/site-packages/libcloud/test'...
Listing './lib/python3.5/site-packages/libcloud/test/common'...
Listing './lib/python3.5/site-packages/libcloud/test/compute'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/abiquo'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/bluebox'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/brightbox'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/cloudsigma'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/cloudstack'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/digitalocean'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/ec2'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/ecp'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/elastichosts'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/gandi'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/gogrid'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/hostvirtual'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/ibm_sce'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/joyent'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/ktucloud'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/meta'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/opennebula_1_4'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/opennebula_2_0'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/opennebula_3_0'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/opennebula_3_2'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/opennebula_3_8'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/openstack'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/openstack_v1.1'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/opsource'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/rimuhosting'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/slicehost'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/softlayer'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/terremark'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/vcl'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/vcloud_1_5'...
Listing './lib/python3.5/site-packages/libcloud/test/compute/fixtures/voxel'...
Listing './lib/python3.5/site-packages/libcloud/test/dns'...
Listing './lib/python3.5/site-packages/libcloud/test/dns/fixtures'...
Listing './lib/python3.5/site-packages/libcloud/test/dns/fixtures/gandi'...
Listing './lib/python3.5/site-packages/libcloud/test/dns/fixtures/hostvirtual'...
Listing './lib/python3.5/site-packages/libcloud/test/dns/fixtures/linode'...
Listing './lib/python3.5/site-packages/libcloud/test/dns/fixtures/rackspace'...
Listing './lib/python3.5/site-packages/libcloud/test/dns/fixtures/route53'...
Listing './lib/python3.5/site-packages/libcloud/test/dns/fixtures/zerigo'...
Listing './lib/python3.5/site-packages/libcloud/test/loadbalancer'...
Listing './lib/python3.5/site-packages/libcloud/test/loadbalancer/fixtures'...
Listing './lib/python3.5/site-packages/libcloud/test/loadbalancer/fixtures/brightbox'...
Listing './lib/python3.5/site-packages/libcloud/test/loadbalancer/fixtures/cloudstack'...
Listing './lib/python3.5/site-packages/libcloud/test/loadbalancer/fixtures/elb'...
Listing './lib/python3.5/site-packages/libcloud/test/loadbalancer/fixtures/gogrid'...
Listing './lib/python3.5/site-packages/libcloud/test/loadbalancer/fixtures/rackspace'...
Listing './lib/python3.5/site-packages/libcloud/test/storage'...
Listing './lib/python3.5/site-packages/libcloud/test/storage/fixtures'...
Listing './lib/python3.5/site-packages/libcloud/test/storage/fixtures/atmos'...
Listing './lib/python3.5/site-packages/libcloud/test/storage/fixtures/azure_blobs'...
Listing './lib/python3.5/site-packages/libcloud/test/storage/fixtures/cloudfiles'...
Listing './lib/python3.5/site-packages/libcloud/test/storage/fixtures/google_storage'...
Listing './lib/python3.5/site-packages/libcloud/test/storage/fixtures/s3'...
Listing './lib/python3.5/site-packages/libcloud/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.1.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/service_registry'...
Listing './lib/python3.5/site-packages/service_registry/test'...
Compiling './lib/python3.5/site-packages/service_registry/test/mock_http_server.py'...
***   File "./lib/python3.5/site-packages/service_registry/test/mock_http_server.py", line 99
    print 'Sending response: status_code=%s, body=%s' % (status_code, body)
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/service_registry-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
